Fixed swagger documentation
